--- a/taller/do/NetBDD1/NetBDD1.csproj
+++ b/taller/do/NetBDD1/NetBDD1.csproj
@@ -6,7 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Appium.WebDriver" Version="4.3.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
     <PackageReference Include="SpecRun.SpecFlow" Version="3.9.7" />
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
